# Virgin-AI-OPS-prototype

./: .env.example  .gitignore  .replit  .vercelignore  ADSB_EXCHANGE_INTEGRATION_STATUS.md  AINO_API_REQUIREMENTS.md  AINO_COMPREHENSIVE_MODEL_DOCUMENTATION.md  AINO_DATA_AUDIT_REPORT.md  AINO_DEMONSTRATION_CONCEPT.md  AINO_EXECUTIVE_SLIDES.md  AINO_IMPLEMENTATION_GUIDE.md  AINO_Operators_Manual.md  AINO_PLATFORM_CAPABILITIES_OVERVIEW.md  AINO_PLATFORM_PRESENTATION.md  AINO_TECHNICAL_IMPLEMENTATION_GUIDE.md  CONSOLIDATION_STRATEGY.md  DEPRECATED_FUNCTIONS.md  ENHANCED_AVIATION_NEWS_MONITORING.md  ENHANCED_SATELLITE_DOCUMENTATION.md  FRONTEND_MODERNIZATION_SUMMARY.md  GEOPOLITICAL_INTELLIGENCE_DOCUMENTATION.md  UI_DESIGN_SYSTEM_AUDIT.md  VIR3N_authentic_flight_plan_for_upload.txt  WEATHER_ENHANCED_SYSTEM_SUMMARY.md  advanced_analytics_engine.py  aino_comprehensive_analysis.json  airport_flight_data.csv  airport_intel.py  airport_scraper_package.py  alternate_airport_ranking.py  api_failure_state_demo.py  authentic_airport_facility_collector.py  authentic_ofp_data.json  aviation_alerts_scraper.py  aviation_economic_analysis.json  aviation_economic_analyzer.py  aviation_news.db  buffer_live_data.py  check_subscription_status.js  comprehensive_weather_demo.py  (+180 more)
AINO_Documentation_Package/: INSTALLATION_GUIDE.md  README.md  connection_risk_engine.py
aino_platform_audit/: README.md  duplication_analysis.sh  duplication_report.txt
airport_facility_data/: aino_airport_facilities.json  authentic_airport_facilities.json
api/: [...path].js
client/: emergency.html  index.html  (+2 more)
(+625 files in other folders)
