[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy<2.0",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow-cpu>=2.14.0",
    "textblob>=0.19.0",
]
